# comicmeteor

./: LICENSE  README.md  setup.cfg
comicmeteor/: __init__.py  descramble.py  retrieve.py
