[metadata]
name = comicmeteor
version = 0.2
author = Lewis Trowbridge
author_email = trowbridgelewis01@gmail.com
description = A small library designed to help the obtaining of images from Comic Meteor.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lewis-Trowbridge/comicmeteor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8